--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz insolite</title>
 <link rel="stylesheet" href="style.css">
-<script defer src="question.js"></script>
+<script type="module" defer src="question.js"></script>
 <script type="module" defer src="game.js"></script>
 </head>
 <body>
 	<div id="quiz-container">
 		<div class="question" id="question-text"></div>
 		<div class="options" id="options-container"></div>
-		 
-		 <div class="buttons-container">
-		  <button id="next-button"></button>
+		<div class="buttons-container">
+		<button id="next-button"></button>
 		</div>
 	</div>
 </body>
