--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 	<div id="quiz-container">
 		<div class="question" id="question-text"></div>
 		<div class="options" id="options-container"></div>
-		<div class="buttons-container">
-		<button id="next-button"></button>
+
+		<div class="button-container">			
+			<button id="next-button"></button>
+			<button id="replay-button" style="display: none;">Rejouer</button> 
+			</div>			
 		</div>
+
 	</div>
 </body>
 </html>
