[ADD] timer and show on html, fix structure of code

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script type="module" defer src="game.js"></script>
 </head>
 <body>
+	<h1 id="timer"></h1>
 	<div id="quiz-container">
 		<div class="question" id="question-text"></div>
 		<div class="options" id="options-container"></div>
