[ADD] confetti function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="style.css">
 <script type="module" defer src="question.js"></script>
 <script type="module" defer src="game.js"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
 </head>
 
 <body>
